<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_update_profile" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/menu_language" />

<!--  todo      <item android:id="@+id/nav_gift_activity"-->
<!--            android:icon="@drawable/ic_card_giftcard_black_24dp"-->
<!--            android:title=""/>-->

    </group>

    <group
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_message"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/menu_message"/>

        <item
            android:id="@+id/menu_invite_friend"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/menu_invite_friend"/>


        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback"/>

        <item android:title="">
            <menu>
                <item
                    android:id="@+id/switch_background_task"
                    android:icon="@drawable/ic_notifications_none_black_24dp"
                    android:title="@string/background_task"
                    app:actionLayout="@layout/background_task_switch_menu_layout" />
            </menu>
        </item>

    </group>

<group android:checkableBehavior="none">
    <item android:title="">
        <menu>
            <item android:id="@+id/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout"/>
        </menu>
    </item>



</group>

</menu>
